# project-template

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build.sh
src/: CMakeLists.txt  main.cpp
